--- a/findEmoBackground.html
+++ b/findEmoBackground.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜找尋我的情緒｜我的情緒故事-背景篇</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-37cc6587.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-4b0d98b2.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-1bddeca0.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-c759d92f.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -44,7 +44,7 @@
         </ul>
     </div>
 </header>
-    <div class="classifiedPage" style="min-height: 80vh;">
+    <main>
         <div class="container py-16">
             <!-- process bar -->
             <div class="d-flex justify-content-end">
@@ -120,7 +120,7 @@
                 </span>
             </div>
         </div>
-    </div>
+    </main>
     
     <footer class="footer py-48">
     <div class="container d-flex">
