--- a/myRecords.html
+++ b/myRecords.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜我的紀錄</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-37cc6587.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-4b0d98b2.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-1bddeca0.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-c759d92f.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -43,8 +43,8 @@
             </li>
         </ul>
     </div>
-</header>
-    <div class="container py-16">
+</header>    <main>
+      <div class="container py-16">
         <!-- 標題 -->
         <div class="titleBar d-flex justify-content-between align-items-center">
             <h2>我的紀錄</h2>
@@ -76,7 +76,7 @@
             </button>
           </div>
         </div>
-
+  
         <!-- Table -->
         <table class="mb-24 table table-hover c-table-border">
           <thead>
@@ -94,7 +94,7 @@
               </th>
               <td>2023/03/14</td>
               <td>快樂 5・幸福 4・安心 3</td>
-              <td><a class="link-main" href="myEmoStory.html">由此進入</a></td>
+              <td><a class="link-main" href="myRecordsEmoStory.html">由此進入</a></td>
             </tr>
             <tr class="text-center table-main-tint03">
               <th scope="row">
@@ -102,7 +102,7 @@
               </th>
               <td>2023/03/14</td>
               <td>快樂 5・幸福 4・安心 3</td>
-              <td><a class="link-main" href="myEmoStory.html">由此進入</a></td>
+              <td><a class="link-main" href="myRecordsEmoStory.html">由此進入</a></td>
             </tr>
             <tr class="text-center">
               <th scope="row">
@@ -110,7 +110,7 @@
               </th>
               <td>2023/03/14</td>
               <td>快樂 5・幸福 4・安心 3</td>
-              <td><a class="link-main" href="myEmoStory.html">由此進入</a></td>
+              <td><a class="link-main" href="myRecordsEmoStory.html">由此進入</a></td>
             </tr>
             <tr class="text-center table-main-tint03">
               <th scope="row">
@@ -118,11 +118,11 @@
               </th>
               <td>2023/03/14</td>
               <td>快樂 5・幸福 4・安心 3</td>
-              <td><a class="link-main" href="myEmoStory.html">由此進入</a></td>
+              <td><a class="link-main" href="myRecordsEmoStory.html">由此進入</a></td>
             </tr>
           </tbody>
         </table>
-
+  
         <!-- 分頁 -->
         <div class="mb-64 d-flex justify-content-end">
           <nav aria-label="Page navigation example">
@@ -143,7 +143,8 @@
             </ul>
           </nav>
         </div>
-    </div>
+      </div>
+    </main>
 
     <footer class="footer py-48">
     <div class="container d-flex">
