--- a/aboutEmotions.html
+++ b/aboutEmotions.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜認識情緒</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-37cc6587.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-4b0d98b2.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-1bddeca0.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-c759d92f.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -94,18 +94,18 @@
                     <h2 class="mb-12">情緒無分好與壞</h2>
                     <p>一般人習慣將情緒分為正負面，覺得快樂屬於正面情緒，悲傷、憤怒、恐懼則對人有害。其實情緒無分好與壞，每一種情緒都有其獨特意義。例如對於陌生環境感到恐懼不安，反映著對安全感的渴求，提醒我們遠離危險。悲傷時脆弱流淚，則可吸引關顧與扶持，促進人際聯繫。</p>
                 </div>
-                <div class="mb-64">
+                <div class="mb-56">
                     <h2 class="mb-12">情緒的健康之道</h2>
                     <p>假如對情緒存在偏見，否定和壓抑自己的真正感覺，明明傷心卻扮開心，明明生氣卻默默忍受，很容易令身心健康出現問題。所謂情緒健康，不代表要時刻保持愉快心情，而是要有能力覺察自己的不同情緒，了解內心需要，並以健康恰當的方式去表達和調適，讓心靈回復平靜。</p>
                 </div>
-                <div class="text-end mb-16">
+                <div class="text-end mb-64">
                     <a class="quote" href="https://wmc.hkfyg.org.hk/emo1" target="_blank">
                         引用文章來源：香港青年協會｜全健空間（九龍）
                     </a>
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 
     <footer class="footer py-48">
     <div class="container d-flex">
