--- a/findMyEmotions.html
+++ b/findMyEmotions.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜找尋我的情緒</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-37cc6587.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-4b0d98b2.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-1bddeca0.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-c759d92f.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -44,39 +44,41 @@
         </ul>
     </div>
 </header>
-    <div class="container py-16">
-        <!-- 標題欄 -->
-        <div class="titleBar d-flex justify-content-between align-items-center">
-          <h2>找尋我的情緒</h2>
+    <main>
+      <div class="container py-16 mb-48">
+          <!-- 標題欄 -->
+          <div class="titleBar d-flex justify-content-between align-items-center">
+            <h2>找尋我的情緒</h2>
+          </div>
+  
+          <!-- 導覽說明 -->
+        <div class="guid px-24 py-16 bg-main-tint03">
+          <p class="mb-8">你在情緒的世界裡迷航了嗎？</p>
+          <p class="mb-8">沒關係，讓我們一起在浪潮情緒卡中，找尋自己的情緒。</p>
+          <p>
+            你可以藉由以下兩種方式「
+            <a class="px-4" href="">分類探索</a>
+            」、「
+            <a class="px-4" href="">自由探索</a>
+            」，挑選情緒卡。
+          </p>
         </div>
-
-        <!-- 導覽說明 -->
-      <div class="guid px-24 py-16 bg-main-tint03">
-        <p class="mb-8">你在情緒的世界裡迷航了嗎？</p>
-        <p class="mb-8">沒關係，讓我們一起在浪潮情緒卡中，找尋自己的情緒。</p>
-        <p>
-          你可以藉由以下兩種方式「
-          <a class="px-4" href="">分類探索</a>
-          」、「
-          <a class="px-4" href="">自由探索</a>
-          」，挑選情緒卡。
-        </p>
+  
+        <!-- 兩大按鈕 -->
+        <div class="py-32 d-flex justify-content-center">
+          <a class="btn-find me-96 d-flex flex-column align-items-center" href="findEmoClassified.html">
+            <h2>分類探索</h2>
+            <img class="default" src="/wavemocards/assets/findEmoClassified-7f2a59f1.svg" alt="分類探索">
+            <img class="hover" src="/wavemocards/assets/findEmoClassifiedHover-eec4bd29.svg" alt="分類探索">
+          </a>
+          <a class="btn-find d-flex flex-column align-items-center" href="findEmoFree.html">
+            <h2>自由探索</h2>
+            <img class="default" src="/wavemocards/assets/finEmoFree-e2e984f4.svg" alt="自由探索">
+            <img class="hover" src="/wavemocards/assets/findEmoClassifiedHover-eec4bd29.svg" alt="分類探索">
+          </a>
+        </div>
       </div>
-
-      <!-- 兩大按鈕 -->
-      <div class="py-32 d-flex justify-content-center">
-        <a class="btn-find me-96 d-flex flex-column align-items-center" href="findEmoClassified.html">
-          <h2>分類探索</h2>
-          <img class="default" src="/wavemocards/assets/findEmoClassified-7f2a59f1.svg" alt="分類探索">
-          <img class="hover" src="/wavemocards/assets/findEmoClassifiedHover-eec4bd29.svg" alt="分類探索">
-        </a>
-        <a class="btn-find d-flex flex-column align-items-center" href="findEmoFree.html">
-          <h2>自由探索</h2>
-          <img class="default" src="/wavemocards/assets/finEmoFree-e2e984f4.svg" alt="自由探索">
-          <img class="hover" src="/wavemocards/assets/findEmoClassifiedHover-eec4bd29.svg" alt="分類探索">
-        </a>
-      </div>
-    </div>
+    </main>
     
     <footer class="footer py-48">
     <div class="container d-flex">
