--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-37cc6587.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-4b0d98b2.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-1bddeca0.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-c759d92f.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -44,7 +44,7 @@
         </ul>
     </div>
 </header>
-    <div class="homepage">
+    <main class="homepage">
       <div class="container">
         <h2 class="text-white mb-24">找尋自我</h2>
         <h2 class="text-white text-end mb-40">情緒的浪潮</h2>
@@ -52,7 +52,7 @@
           <a class="px-64 btn btn-pink c-btn c-btn-xl" href="aboutEmotions.html">認識情緒</a>
         </div>
       </div>
-    </div>
+    </main>
 
     
     <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
