--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>浪潮情緒卡</title>
-    <script type="module" crossorigin src="/wavemocards/assets/main-37cc6587.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-4b0d98b2.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-1bddeca0.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-c759d92f.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -24,8 +24,7 @@
         </ul>
     </div>
 </header>
-    <div class="homepage">
-      <!-- <img src="../assets/images/homepage.svg" alt="homepage background"> -->
+    <main class="homepage">
       <div class="container">
         <h2 class="text-white mb-24">找尋自我</h2>
         <h2 class="text-white text-end mb-40">情緒的浪潮</h2>
@@ -33,7 +32,7 @@
           <a class="btn btn-pink c-btn c-btn-xl" href="signup.html">進入情緒浪潮</a>
         </div>
       </div>
-    </div>
+    </main>
 
     
     <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
