--- a/pages/myRecordsEmoStory.html
+++ b/pages/myRecordsEmoStory.html
@@ -18,7 +18,7 @@
                     <h2>我的紀錄｜情緒故事</h2>
                     <div class="nav-btn d-flex justify-content-end">
                         <a class="btn btn-outline-main c-btn" href="myRecords.html">返回</a>
-                        <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoStrength1st.html">修改</a>
+                        <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="myRecordsEmoStoryModify.html">修改</a>
                     </div>
                 </div>
 
