--- a/myRecordsEmoStory.html
+++ b/myRecordsEmoStory.html
@@ -7,8 +7,8 @@
         <title>浪潮情緒卡｜我的紀錄｜情緒故事</title>
         <!-- Bootstrap icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-      <script type="module" crossorigin src="/wavemocards/assets/main-fe4e98ed.js"></script>
-      <link rel="stylesheet" href="/wavemocards/assets/main-f12ebece.css">
+      <script type="module" crossorigin src="/wavemocards/assets/main-33b020d3.js"></script>
+      <link rel="stylesheet" href="/wavemocards/assets/main-db782ff6.css">
     </head>
     <body>
         <header class="header h-logined sticky-top">
@@ -51,7 +51,7 @@
                     <h2>我的紀錄｜情緒故事</h2>
                     <div class="nav-btn d-flex justify-content-end">
                         <a class="btn btn-outline-main c-btn" href="myRecords.html">返回</a>
-                        <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoStrength1st.html">修改</a>
+                        <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="myRecordsEmoStoryModify.html">修改</a>
                     </div>
                 </div>
 
