--- a/pages/findMyEmotions.html
+++ b/pages/findMyEmotions.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
   <body>
-    <%- include('./layout/headerLogined'); -%>
+    <%- include('./layout/headerLoggedIn'); -%>
 
     <main>
       <div class="container py-16 mb-48">
