--- a/pages/myRecordsEmoStoryModify.html
+++ b/pages/myRecordsEmoStoryModify.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     </head>
     <body>
-        <%- include('./layout/headerLogined'); -%>
+        <%- include('./layout/headerLoggedIn'); -%>
 
         <main>
             <div class="container py-16 mb-48">
@@ -25,7 +25,7 @@
     
                     <!-- 第 1 區 日期與情緒 -->
                     <div class="container">
-                        <div class="row mb-24">
+                        <div class="row mb-8">
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">日期</div>
@@ -34,8 +34,16 @@
                             </div>
                             <div class="col-6">
                                 <div class="row">
-                                    <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">情緒（強度）</div>
-                                    <div class="col-8 px-12 py-8">快樂(5)、幸福(4)、安心(3)</div>
+                                    <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">情緒（強度）｜第一次</div>
+                                    <div class="col-8 px-12 py-8">快樂 5・幸福 4・安心 3</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-24 justify-content-end">
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">情緒（強度）｜第二次</div>
+                                    <div class="col-8 px-12 py-8">快樂 5・幸福 4・安心 3</div>
                                 </div>
                             </div>
                         </div>
