--- a/pages/sharedByOthers.html
+++ b/pages/sharedByOthers.html
@@ -4,21 +4,17 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>浪潮情緒卡｜共享紀錄｜他人的分享</title>
+        <title>浪潮情緒卡｜他人的分享</title>
         <!-- Bootstrap icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     </head>
     <body>
-        <%- include('./layout/headerLogined'); -%>
+        <%- include('./layout/headerLoggedIn'); -%>
         <main>
         <div class="container py-16">
             <!-- 標題 -->
-            <div class="titleBar d-flex justify-content-between align-items-center">
+            <div class="titleBar">
                 <h2>共享紀錄｜他人的分享</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <div class="btn-disable">他人的分享</div>
-                    <a class="ms-16 btn btn-outline-main c-btn" href="sharedByMyself.html">我的分享</a>
-                </div>
             </div>
             
             <!-- 搜尋條 & 分享、刪除 -->
@@ -55,7 +51,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -67,7 +63,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -79,7 +75,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -91,7 +87,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -103,7 +99,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -115,7 +111,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -138,7 +134,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -150,7 +146,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -162,7 +158,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -185,7 +181,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
