--- a/myRecordsEmoStoryModify.html
+++ b/myRecordsEmoStoryModify.html
@@ -27,7 +27,7 @@
                 <a href="myRecords.html" class="px-4 py-8" id="myRecords">我的紀錄</a>
             </li>
             <li class="ms-16">
-                <a href="sharedByOthers.html" class="px-4 py-8" id="sharedByOthers">共享紀錄</a>
+                <a href="sharedByOthers.html" class="px-4 py-8" id="sharedByOthers">他人的分享</a>
             </li>
             <li class="ms-16">
                 <a href="account.html" class="profile" id="profile">
@@ -58,7 +58,7 @@
     
                     <!-- 第 1 區 日期與情緒 -->
                     <div class="container">
-                        <div class="row mb-24">
+                        <div class="row mb-8">
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">日期</div>
@@ -67,8 +67,16 @@
                             </div>
                             <div class="col-6">
                                 <div class="row">
-                                    <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">情緒（強度）</div>
-                                    <div class="col-8 px-12 py-8">快樂(5)、幸福(4)、安心(3)</div>
+                                    <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">情緒（強度）｜第一次</div>
+                                    <div class="col-8 px-12 py-8">快樂 5・幸福 4・安心 3</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-24 justify-content-end">
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">情緒（強度）｜第二次</div>
+                                    <div class="col-8 px-12 py-8">快樂 5・幸福 4・安心 3</div>
                                 </div>
                             </div>
                         </div>
