--- a/sharedByOthers.html
+++ b/sharedByOthers.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>浪潮情緒卡｜共享紀錄｜他人的分享</title>
+        <title>浪潮情緒卡｜他人的分享</title>
         <!-- Bootstrap icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
       <script type="module" crossorigin src="/wavemocards/assets/main-d4ae1797.js"></script>
@@ -27,7 +27,7 @@
                 <a href="myRecords.html" class="px-4 py-8" id="myRecords">我的紀錄</a>
             </li>
             <li class="ms-16">
-                <a href="sharedByOthers.html" class="px-4 py-8" id="sharedByOthers">共享紀錄</a>
+                <a href="sharedByOthers.html" class="px-4 py-8" id="sharedByOthers">他人的分享</a>
             </li>
             <li class="ms-16">
                 <a href="account.html" class="profile" id="profile">
@@ -46,12 +46,8 @@
 </header>        <main>
         <div class="container py-16">
             <!-- 標題 -->
-            <div class="titleBar d-flex justify-content-between align-items-center">
+            <div class="titleBar">
                 <h2>共享紀錄｜他人的分享</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <div class="btn-disable">他人的分享</div>
-                    <a class="ms-16 btn btn-outline-main c-btn" href="sharedByMyself.html">我的分享</a>
-                </div>
             </div>
             
             <!-- 搜尋條 & 分享、刪除 -->
@@ -88,7 +84,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -100,7 +96,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -112,7 +108,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -124,7 +120,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -136,7 +132,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -148,7 +144,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -171,7 +167,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -183,7 +179,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -195,7 +191,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
@@ -218,7 +214,7 @@
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <span>生氣 3・難過 4・討厭 5</span>
-                                            <a class="btn-emoStory" href="sharedByOthersEmoStory">情緒故事</a>
+                                            <a class="btn-emoStory" href="sharedByOthersEmoStory.html">情緒故事</a>
                                         </div>
                                     </div>
                                 </div>
