--- a/addEmoCard.html
+++ b/addEmoCard.html
@@ -27,7 +27,7 @@
                 <a href="myRecords.html" class="px-4 py-8" id="myRecords">我的紀錄</a>
             </li>
             <li class="ms-16">
-                <a href="sharedByOthers.html" class="px-4 py-8" id="sharedByOthers">共享紀錄</a>
+                <a href="sharedByOthers.html" class="px-4 py-8" id="sharedByOthers">他人的分享</a>
             </li>
             <li class="ms-16">
                 <a href="account.html" class="profile" id="profile">
