--- a/sharedByOthersEmoStory.html
+++ b/sharedByOthersEmoStory.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>浪潮情緒卡｜我的紀錄｜情緒故事</title>
+        <title>浪潮情緒卡｜他人的分享｜情緒故事</title>
         <!-- Bootstrap icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
       <script type="module" crossorigin src="/wavemocards/assets/main-d4ae1797.js"></script>
@@ -48,10 +48,9 @@
             <div class="container py-16 mb-48">
                 <!-- title bar -->
                 <div class="titleBar d-flex justify-content-between align-items-center">
-                    <h2>我的紀錄｜情緒故事</h2>
+                    <h2>他人的分享｜情緒故事</h2>
                     <div class="nav-btn d-flex justify-content-end">
-                        <a class="btn btn-outline-main c-btn" href="myRecords.html">返回</a>
-                        <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="myRecordsEmoStoryModify.html">修改</a>
+                        <a class="btn btn-outline-main c-btn" href="sharedByOthers.html">返回</a>
                     </div>
                 </div>
 
@@ -60,22 +59,28 @@
                     <div class="row mb-8">
                         <div class="col-6">
                             <div class="row">
+                                <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">分享人</div>
+                                <div class="col-8 px-12 py-8">黃小翰</div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="row">
+                                <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">情緒（強度）｜第一次</div>
+                                <div class="col-8 px-12 py-8">生氣 3・難過 4・討厭 5</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-24">
+                        <div class="col-6">
+                            <div class="row">
                                 <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">日期</div>
                                 <div class="col-8 px-12 py-8">2023 / 01 / 06</div>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="row">
-                                <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">情緒（強度）｜第一次</div>
-                                <div class="col-8 px-12 py-8">快樂 5・幸福 4・安心 3</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mb-24 justify-content-end">
-                        <div class="col-6">
-                            <div class="row">
                                 <div class="col-4 px-12 py-8 bg-main text-white fw-bold rounded-1">情緒（強度）｜第二次</div>
-                                <div class="col-8 px-12 py-8">快樂 5・幸福 4・安心 3</div>
+                                <div class="col-8 px-12 py-8">生氣 2・難過 3・討厭 3</div>
                             </div>
                         </div>
                     </div>
@@ -85,7 +90,7 @@
                     </div>
                     <div class="row mb-24">
                         <div class="col-2 px-12 py-8 d-flex align-items-center bg-main-tint02 fw-500 rounded-1">情緒的原因/背景</div>
-                        <div class="col-10 px-12 py-8">同學誇獎我總是很貼心，做事也很細心。說我是她很重要的朋友。</div>
+                        <div class="col-10 px-12 py-8">好哥們誤會我，還罵我，所以我感到很火大，也很難過。</div>
                     </div>
                     <!-- 第 3 區 情緒故事｜行動篇 -->
                     <div class="row mb-16">
@@ -93,27 +98,27 @@
                     </div>
                     <div class="row mb-8">
                         <div class="col-2 px-12 py-8 d-flex align-items-center bg-main-tint02 fw-500 rounded-1">情緒後我所做的行動</div>
-                        <div class="col-10 px-12 py-8">我很開心地跑去和同學Ｂ說。</div>
+                        <div class="col-10 px-12 py-8">我跑去跟對方大吵一架。</div>
                     </div>
                     <div class="row mb-8">
                         <div class="col-2 px-12 py-8 d-flex align-items-center bg-main-tint02 fw-500 rounded-1">行動後的結果</div>
-                        <div class="col-10 px-12 py-8 bg-gray-200 rounded-1">同學Ｂ聽完後很開心地說他也要跟我們一起出去玩！</div>
+                        <div class="col-10 px-12 py-8 bg-gray-200 rounded-1">我們兩個現在在冷戰，都不講話。</div>
                     </div>
                     <div class="row mb-8">
                         <div class="col-2 px-12 py-8 d-flex align-items-center bg-main-tint02 fw-500 rounded-1">結果帶給我的感受</div>
-                        <div class="col-10 px-12 py-8">我很開心！</div>
+                        <div class="col-10 px-12 py-8">很難過、後悔，但也很不爽</div>
                     </div>
                     <div class="row mb-8">
                         <div class="col-2 px-12 py-8 d-flex align-items-center bg-main-tint02 fw-500 rounded-1">結果好或不好？</div>
-                        <div class="col-10 px-12 py-8 bg-gray-200 rounded-1">好</div>
+                        <div class="col-10 px-12 py-8 bg-gray-200 rounded-1">不好</div>
                     </div>
                     <div class="row mb-8">
                         <div class="col-2 px-12 py-8 d-flex align-items-center bg-main-tint02 fw-500 rounded-1">是否感到後悔</div>
-                        <div class="col-10 px-12 py-8">否</div>
+                        <div class="col-10 px-12 py-8">是</div>
                     </div>
                     <div class="row">
                         <div class="col-2 px-12 py-8 d-flex align-items-center bg-main-tint02 fw-500 rounded-1">下次怎麼做會更好呢？</div>
-                        <div class="col-10 px-12 py-8 bg-gray-200 rounded-1"></div>
+                        <div class="col-10 px-12 py-8 bg-gray-200 rounded-1">我不知道該怎麼辦才好⋯⋯</div>
                     </div>
                 </div>
             </div>
