--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>浪潮情緒卡</title>
-    <script type="module" crossorigin src="/wavemocards/assets/main-d4ae1797.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-ad78ba59.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-28d83bcb.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-4f2e6f8e.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -16,6 +16,9 @@
         </h1>
         <ul class="d-flex justify-content-between align-items-center mb-0 ps-0">
             <li>
+                <a href="aboutEmotions.html" class="px-4 py-8 link-gray-550">關於情緒</a>
+            </li>
+            <li class="ms-20">
                 <a href="login.html" class="btn btn-main c-btn">登入</a>
             </li>
             <li class="ms-16">
