--- a/modifyEmoCard.html
+++ b/modifyEmoCard.html
@@ -139,17 +139,19 @@
                         </a>
                     </li>
                     <li class="mb-4">
-                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
+                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/" target="_blank">
                             <span>Front-End Engineer</span>
                             <span>Shu-Ping Yu</span>
                         </a>
                     </li>
-                    <li class="mb-4 d-flex justify-content-between">
-                        <span>Front-End Consultant</span>
-                        <span>Wei-Kai Lin</span>
+                    <li class="mb-4">
+                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/%E5%81%89%E5%87%B1-%E6%9E%97-668aaa204/" target="_blank">
+                            <span>Front-End Consultant</span>
+                            <span>Wei-Kai Lin</span>
+                        </a>
                     </li>
                     <li class="mb-4">
-                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/techleon/"  target="_blank">
+                        <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/techleon/" target="_blank">
                             <span>Back-End Developer</span>
                             <span>Leon Wu</span>
                         </a>
