--- a/myRecordsAnalyze.html
+++ b/myRecordsAnalyze.html
@@ -66,8 +66,8 @@
                     </div>
                 </form>
                 <!-- 分享 -->
-                <button class="rounded-pill border-0 fs-5 c-btn-icon">
-                    <i class="bi bi-share"></i>
+                <button class="rounded-pill border-0 fs-4 c-btn-icon">
+                    <i class="bi bi-box-arrow-down"></i>
                 </button>
             </div>
 
