--- a/findEmoAmazed.html
+++ b/findEmoAmazed.html
@@ -116,7 +116,7 @@
             </div>
             <!-- Developers -->
             <div class="col-3">
-                <h3>開發群</h3>
+                <h3>開發團隊</h3>
                 <ul>
                     <li class="mb-4">
                         <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
