--- a/myRecords.html
+++ b/myRecords.html
@@ -84,7 +84,8 @@
               <th scope="col"></th>
               <th scope="col">日期</th>
               <th scope="col">情緒與強度</th>
-              <th scope="col">情緒故事</th>
+              <th scope="col">分享次數</th>
+              <th scope="col">情緒故事與分享</th>
             </tr>
           </thead>
           <tbody>
@@ -94,6 +95,7 @@
               </th>
               <td>2023/03/14</td>
               <td>快樂 5・幸福 4・安心 3</td>
+              <td>2次</td>
               <td><a class="link-main" href="myRecordsEmoStory.html">由此進入</a></td>
             </tr>
             <tr class="text-center table-main-tint03">
@@ -102,6 +104,7 @@
               </th>
               <td>2023/03/14</td>
               <td>快樂 5・幸福 4・安心 3</td>
+              <td>0次</td>
               <td><a class="link-main" href="myRecordsEmoStory.html">由此進入</a></td>
             </tr>
             <tr class="text-center">
@@ -110,6 +113,7 @@
               </th>
               <td>2023/03/14</td>
               <td>快樂 5・幸福 4・安心 3</td>
+              <td>0次</td>
               <td><a class="link-main" href="myRecordsEmoStory.html">由此進入</a></td>
             </tr>
             <tr class="text-center table-main-tint03">
@@ -118,6 +122,7 @@
               </th>
               <td>2023/03/14</td>
               <td>快樂 5・幸福 4・安心 3</td>
+              <td>0次</td>
               <td><a class="link-main" href="myRecordsEmoStory.html">由此進入</a></td>
             </tr>
           </tbody>
@@ -157,7 +162,7 @@
             </div>
             <!-- Developers -->
             <div class="col-3">
-                <h3>開發群</h3>
+                <h3>開發團隊</h3>
                 <ul>
                     <li class="mb-4">
                         <a class="d-flex justify-content-between" href="https://www.linkedin.com/in/shu-ping-yu-238655268/"  target="_blank">
