--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜登入</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-97905320.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-658293ab.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-1de23126.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-e80f7c9a.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -42,11 +42,11 @@
                     </div>
                     <h2 class="mb-32">登入</h2>
                     <!-- 尚未填入 a 連結 -->
-                    <a class="w-100 mb-32 py-8 btn btn-outline-main c-btn-outline-main d-flex justify-content-center align-items-center" href="#">
+                    <!-- <a class="w-100 mb-32 py-8 btn btn-outline-main c-btn-outline-main d-flex justify-content-center align-items-center" href="#">
                         透過 Google 帳號登入
                         <i class="bi bi-google ms-8"></i>
                     </a>
-                    <div class="or mb-32">或</div>
+                    <div class="or mb-32">或</div> -->
     
                     <!-- 尚未填入 action 內容 -->
                     <form action="#" method="post" class="needs-validation" novalidate>
@@ -60,7 +60,7 @@
                                 請輸入正確的 e-mail 帳號
                             </div>
                         </div>
-                        <div class="mb-20">
+                        <div class="mb-32">
                             <label for="singupPassword" class="form-label d-flex justify-content-between">
                                 密碼
                                 <span class="must">*必填</span>
