Modify signup.html & login.html

--- a/pages/login.html
+++ b/pages/login.html
@@ -35,7 +35,7 @@
                         <div class="mb-16">
                             <label for="singupEmail" class="form-label  d-flex justify-content-between">
                                 E-mail
-                                <span class="must">*必填</span>
+                                <span class="text-pink-tint02 fs-9">*必填</span>
                             </label>
                             <input type="email" class="form-control rounded-pill px-20" id="singupEmail" placeholder="wavemocards@gmail.com" required>
                             <div class="invalid-feedback">
@@ -45,7 +45,7 @@
                         <div class="mb-32">
                             <label for="singupPassword" class="form-label d-flex justify-content-between">
                                 密碼
-                                <span class="must">*必填</span>
+                                <span class="text-pink-tint02 fs-9">*必填</span>
                             </label>
                             <input type="password" class="form-control rounded-pill px-20" id="singupPassword" required aria-describedby="passwordHelp" placeholder="********" required>
                             <div class="invalid-feedback">
